--- a/docker-images/DockerFile
+++ b/docker-images/DockerFile
@@ -2,6 +2,7 @@
 
 # stage 1: build stage
 FROM php:8.3-fpm
+ENV NODE_VERSION=20.16.0
 
 # Install Composer
 RUN echo "Install COMPOSER"
@@ -18,6 +19,12 @@ RUN apt-get update
 RUN apt-get install -y libpq-dev \
     && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
     && docker-php-ext-install pdo pdo_pgsql pgsql
+
+# install xdebug
+RUN pecl install xdebug
+RUN docker-php-ext-enable xdebug && \ 
+    docker-php-source delete
+
 
 # Update package manager and install useful tools
 RUN apt-get update && apt-get -y install apt-utils nano
@@ -42,6 +49,15 @@ RUN apt-get -y install --fix-missing \
     libonig-dev \
     libxml2-dev
 
+
+RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
+ENV NVM_DIR=/root/.nvm
+RUN . "$NVM_DIR/nvm.sh" && nvm install ${NODE_VERSION}
+RUN . "$NVM_DIR/nvm.sh" && nvm use v${NODE_VERSION}
+RUN . "$NVM_DIR/nvm.sh" && nvm alias default v${NODE_VERSION}
+ENV PATH="/root/.nvm/versions/node/v${NODE_VERSION}/bin/:${PATH}"
+RUN node --version
+RUN npm --version
 
 # Clean up
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
